MGP v 1.12.7 7/2/25
-------------------
  * changes to DSA calculation:
    -modified calcDSA to accomodate weak DSA (MFI > 1000). all potential DSA
    will be filtered to only those with an average value greater than > 1000. The
    presence of weak DSA will not lead to DSA = Y, but it will be present in the
    output table and will be recorded in the log
    -removed the 'DPDQ_serological_reference.xlsx' file and all related functions/
    dependencies
    * changed surrogate entry for DSA table in case of DPA or DQA - use imputed 
    antigen instead of display all surrogate alphas
    -replaced ',' for combos in MFI values with '/' - was leading to 'False positive'
    reporting with DSA
    -cleaned up calcDSA
    -added logging to capture sample number and test numbers used for calcDSA

MGP v 1.12.6 6/26/25
-------------------
  * moved novel allele processing code up in calcABCDRB() and calcDQDP() to 
  fix incorrect novel allele mismatch calculations

MGP v 1.12.5 6/20/25
-------------------
  * replace 'Driver' in dbConn() function with an environment variable
  * replaced static 'SUNetID' with the 'INSTITUTION_ID' env variable; if not set,
  default to 'Instution ID'
  * changed logging for SUNetID username; if 'SHINYPROXY_USERNAME' env variable is not set,
  the institution name and ShinyProxy username will not be logged'
  * replaced hard coded maintainer e-mail with an environment variable and replaced in 
  executeMGPServer(), server.R, and instructions.R

MGP v 1.12.4 5/30/25
-------------------
  * fixed getTestNumbers() to only look for billable IgG tests
  * added patient ITL to log before execute MGP starts - in case failure occurs during typing, it'll be captured in Splunk
  * added tryCatch during getTyping + a reactive for assessing if there was an exception during that block. if yes, output
  error message and enable download log instead of allowing app to crash
  * removed extraneous textOutput('p_itl') in ui.R

MGP v 1.12.3 3/25/25